# groupholidaybooking

./: .env.example  .gitignore  LICENSE  README.md  app.py  example_config.yaml  pyproject.toml  render.yaml  requirements.txt
.streamlit/: secrets.toml.example
apps/api/: .env.example  README.md  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
apps/api/app/: main.py
apps/api/app/core/: ai.py  airports.py  calendar_sync.py  calibration.py  config.py  cost_of_living.py  crypto.py  destinations.py  email.py  flights.py  ground.py  live_search.py  optimiser.py
apps/api/app/db/: supabase.py
apps/api/app/routes/: availability.py  calendars.py  chat.py  destinations.py  feedback.py  flights.py  health.py  meetup.py  optimise.py  profile.py  rooms.py
apps/api/tests/: test_availability_windows.py  test_calendar_sync.py  test_calibration.py  test_core_logic.py  test_flights_selection.py  test_ground_fallback.py  test_live_search.py  test_meetup.py  test_multi_window.py  test_optimiser.py  test_ranked_voting.py  test_rough_window.py
apps/streamlit-legacy/group_holiday/: airports.py  output.py
apps/web/: .env.local.example  middleware.ts  next.config.ts  package-lock.json  package.json
apps/web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  (+1 more)
docs/: ARCHITECTURE.md  ROADMAP.md
group_holiday/: config.py  destinations.py  flights.py  ground.py  main.py  optimiser.py  output.py
infra/: run-migration.sh
infra/supabase/: README.md
supabase/.temp/: linked-project.json  pooler-url  project-ref
(+67 files in other folders)
