[project]
name = "group-holiday-booking"
version = "0.1.0"
description = "Multi-origin group flight optimiser"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.3",
    "diskcache>=5.6",
    "pyyaml>=6.0",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]

[project.scripts]
group-holiday = "group_holiday.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["group_holiday"]
