[project]
name = "group-holiday-api"
version = "0.1.0"
description = "FastAPI backend for the Group Holiday Booking platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "tenacity>=8.3",
    "diskcache>=5.6",
    "python-dotenv>=1.0",
    "supabase>=2.7",
    "google-generativeai>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
